{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 33,
  "lineage": "ab5f84c9-1cd7-f3da-dd79-c4f64776f336",
  "resources": [
    {
      "module": "module.ec2.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:security-group/sg-050d80b50100871d6",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050d80b50100871d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-security-group",
            "name_prefix": "",
            "owner_id": "024848443306",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a511f5954b6d8fb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d15157af9172b6ae",
            "arn": "arn:aws:ec2:us-east-1:024848443306:elastic-ip/eipalloc-0d15157af9172b6ae",
            "domain": "vpc",
            "id": "eipalloc-0d15157af9172b6ae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-225-145-83.compute-1.amazonaws.com",
            "public_ip": "3.225.145.83",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:internet-gateway/igw-0c220adcde2649655",
            "id": "igw-0c220adcde2649655",
            "owner_id": "024848443306",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0a511f5954b6d8fb6"
          },
          "dependencies": [
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d15157af9172b6ae",
            "association_id": "eipassoc-0e85c70aa201bf313",
            "connectivity_type": "public",
            "id": "nat-00d40b45d970d1d44",
            "network_interface_id": "eni-077bfa00be164fd32",
            "private_ip": "10.0.1.81",
            "public_ip": "3.225.145.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09b6be21b5dfc91df",
            "tags": {
              "Name": "main-natgw"
            },
            "tags_all": {
              "Name": "main-natgw"
            }
          },
          "dependencies": [
            "module.ec2.module.vpc.aws_eip.main",
            "module.ec2.module.vpc.aws_subnet.public",
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0696454800010e7dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00d40b45d970d1d44",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0696454800010e7dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.vpc.aws_eip.main",
            "module.ec2.module.vpc.aws_nat_gateway.main",
            "module.ec2.module.vpc.aws_route_table.private",
            "module.ec2.module.vpc.aws_subnet.public",
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c220adcde2649655",
            "id": "r-rtb-0e54e3c4539d7cecb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e54e3c4539d7cecb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.vpc.aws_internet_gateway.main",
            "module.ec2.module.vpc.aws_route_table.public",
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:route-table/rtb-0696454800010e7dd",
            "id": "rtb-0696454800010e7dd",
            "owner_id": "024848443306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a511f5954b6d8fb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:route-table/rtb-0e54e3c4539d7cecb",
            "id": "rtb-0e54e3c4539d7cecb",
            "owner_id": "024848443306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a511f5954b6d8fb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e24d18a620489ddc",
            "route_table_id": "rtb-0696454800010e7dd",
            "subnet_id": "subnet-0af356d8b6b6e523d"
          },
          "dependencies": [
            "module.ec2.module.vpc.aws_route_table.private",
            "module.ec2.module.vpc.aws_subnet.private",
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05095af8c031179c4",
            "route_table_id": "rtb-0e54e3c4539d7cecb",
            "subnet_id": "subnet-09b6be21b5dfc91df"
          },
          "dependencies": [
            "module.ec2.module.vpc.aws_route_table.public",
            "module.ec2.module.vpc.aws_subnet.public",
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:subnet/subnet-0af356d8b6b6e523d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af356d8b6b6e523d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024848443306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0a511f5954b6d8fb6"
          },
          "dependencies": [
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:subnet/subnet-09b6be21b5dfc91df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b6be21b5dfc91df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024848443306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0a511f5954b6d8fb6"
          },
          "dependencies": [
            "module.ec2.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:vpc/vpc-0a511f5954b6d8fb6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d13fee003566cbd1",
            "default_route_table_id": "rtb-0c3cfc7518159f4a9",
            "default_security_group_id": "sg-04564cddd0940bd75",
            "dhcp_options_id": "dopt-042af19721644c438",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a511f5954b6d8fb6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3cfc7518159f4a9",
            "owner_id": "024848443306",
            "tags": {
              "Name": "Main-vpc"
            },
            "tags_all": {
              "Name": "Main-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:security-group/sg-06ba429eff93c6fb8",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ba429eff93c6fb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-security-group",
            "name_prefix": "",
            "owner_id": "024848443306",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aaacefb8b99f8db1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1533a436d05f20e",
            "arn": "arn:aws:ec2:us-east-1:024848443306:elastic-ip/eipalloc-0d1533a436d05f20e",
            "domain": "vpc",
            "id": "eipalloc-0d1533a436d05f20e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-168-116-9.compute-1.amazonaws.com",
            "public_ip": "35.168.116.9",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:internet-gateway/igw-0826944aaf34e56a5",
            "id": "igw-0826944aaf34e56a5",
            "owner_id": "024848443306",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0aaacefb8b99f8db1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1533a436d05f20e",
            "association_id": "eipassoc-081bca84f268bd9ca",
            "connectivity_type": "public",
            "id": "nat-0a811485fca394510",
            "network_interface_id": "eni-0fae525b771864d22",
            "private_ip": "10.0.1.202",
            "public_ip": "35.168.116.9",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a196e35bba2fa39",
            "tags": {
              "Name": "main-natgw"
            },
            "tags_all": {
              "Name": "main-natgw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0479cc253d5ab3dbf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a811485fca394510",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0479cc253d5ab3dbf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0826944aaf34e56a5",
            "id": "r-rtb-028122a5a3a4ef69b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028122a5a3a4ef69b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:route-table/rtb-0479cc253d5ab3dbf",
            "id": "rtb-0479cc253d5ab3dbf",
            "owner_id": "024848443306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aaacefb8b99f8db1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:route-table/rtb-028122a5a3a4ef69b",
            "id": "rtb-028122a5a3a4ef69b",
            "owner_id": "024848443306",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aaacefb8b99f8db1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01119e938534babe8",
            "route_table_id": "rtb-0479cc253d5ab3dbf",
            "subnet_id": "subnet-0ce5d9aa01c287a81"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae2a05bd9ab26764",
            "route_table_id": "rtb-028122a5a3a4ef69b",
            "subnet_id": "subnet-05a196e35bba2fa39"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:subnet/subnet-0ce5d9aa01c287a81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce5d9aa01c287a81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024848443306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0aaacefb8b99f8db1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:subnet/subnet-05a196e35bba2fa39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a196e35bba2fa39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024848443306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0aaacefb8b99f8db1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024848443306:vpc/vpc-0aaacefb8b99f8db1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01cd20e3f43db50e6",
            "default_route_table_id": "rtb-0fff39f13ee4a0fde",
            "default_security_group_id": "sg-04db5c5bc1e508180",
            "dhcp_options_id": "dopt-042af19721644c438",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aaacefb8b99f8db1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fff39f13ee4a0fde",
            "owner_id": "024848443306",
            "tags": {
              "Name": "Main-vpc"
            },
            "tags_all": {
              "Name": "Main-vpc"
            }
          }
        }
      ]
    }
  ]
}